--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/chat.css">
 
-    <title>Firebase Cloud Chat</title>
+    <title>Chat - Prova Tarefa</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <header>
         <!-- APP TITLE -->
         <div class="example-chat-toolbar">
-          <h2>Cloud Chat App</h2>
+          <h2>Chat - Prova Tarefa</h2>
         </div>
 
         <!-- NAME FIELD -->
